syntax = "proto3";
package io.token.proto.common.member;

option java_outer_classname = "MemberProtos";

import "address.proto";
import "alias.proto";
import "security.proto";

// Adds member key to the directory.
message MemberAddKeyOperation {
  io.token.proto.common.security.Key key = 1;
}

// Removes member key from the directory.
message MemberRemoveKeyOperation {
  string key_id = 1;
}

// Adds/removes member alias to/from the directory.
message MemberAliasOperation {
  string alias_hash = 1;
}

// TODO(PR-1161): Remove this when we no longer require backwards compatibility with usernames
message MemberUsernameOperation {
  string username = 1;
}

message MemberOperation {
   oneof operation {
     MemberAddKeyOperation add_key = 1;
     MemberRemoveKeyOperation remove_key = 2;
     MemberAliasOperation add_alias = 5;
     MemberAliasOperation remove_alias = 4;

     // TODO(PR-1161): Remove this when we no longer require bakcwards compatibility with usernames
     MemberUsernameOperation add_username = 3;
   }
}

// Updates member information in the directory. The directory is append only
// log of operations.
message MemberUpdate {
  string prev_hash = 1;
  string member_id = 2;
  repeated MemberOperation operations = 3;
}

// Metadata associated with MemberUpdate.
// It is outside of MemberUpdate because MemberUpdate is signed and passed to the Directory.
message MemberOperationMetadata {
  oneof type {
    AddAliasMetadata add_alias_metadata = 1;
  }

  message AddAliasMetadata {
    string alias_hash = 1;
    io.token.proto.common.alias.Alias alias = 2;
  }
}

// A member record that is computed by replaying all the member updates.
message Member {
  string id = 1;
  string last_hash = 2;
  repeated string alias_hashes = 3;
  repeated io.token.proto.common.security.Key keys = 4;
}

// A member address record
message AddressRecord {
  string id = 1; // Address id
  string name = 2; // The display name of the address
  io.token.proto.common.address.Address address = 3; // Country specific JSON address
  io.token.proto.common.security.Signature address_signature = 4; // member signature of the address
}

// Public profile
message Profile {
  string display_name_first = 1;
  string display_name_last = 2;
  string original_picture_id = 3;   // Ignored in set profile request
  string small_picture_id = 4;      // Ignored in set profile request
  string medium_picture_id = 5;     // Ignored in set profile request
  string large_picture_id = 6;      // Ignored in set profile request
}

// Profile picture sizes
enum ProfilePictureSize {
  INVALID = 0;
  ORIGINAL = 1;
  SMALL = 2;
  MEDIUM = 3;
  LARGE = 4;
}
